--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1732,7 +1732,7 @@ button .icon-plus {
   background-color: #333D47;
   position: fixed;
   z-index: 1000;
-  padding: 15px 20px 15px 20px;
+  padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
 }
 
 .menu {
@@ -1766,70 +1766,38 @@ button .icon-plus {
   border-radius: 0.5rem;
 }
 
-.gnb-area .gnb {
-  padding: 15px 20px 15px 20px;
+.menu-area .gnb {
+  padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
   vertical-align: middle;
 }
 
-.gnb-area .gnb.active {
-  background-color: #283238;
-}
-
-.gnb-area .gnb.active span {
-  color: #ffffff;
-}
-
-.gnb-area .gnb.active span.icon-gnb {
-  background: #0098FF;
-}
-
-.gnb-area .gnb.active-parent span {
-  color: #ffffff;
-}
-
-.gnb-area .gnb.active-parent span.icon-gnb {
-  background: #0098FF;
-}
-
-.gnb-area .gnb.active-parent span.arrow-right, .gnb-area .gnb.active-parent span.arrow-down {
-  background: #ffffff;
-}
-
-.gnb-area > ul > li {
+.menu-area .gnb-area {
   line-height: 1.3;
   font-weight: 500;
 }
 
-.gnb-area > ul > li svg {
-  fill: #929aa6;
+.menu-area .gnb-area:first-child {
+  margin-top: 0.3125rem;
 }
 
-.gnb-area > ul > li:hover {
+.menu-area .gnb-area:hover {
   background: #283238;
 }
 
-.gnb-area > ul > li .snb-set {
-  display: none;
-}
-
-.gnb-area > ul > li:first-child {
-  margin-top: 5px;
-}
-
-.gnb-area > ul > li > a {
+.menu-area .gnb-area .gnb-link {
   display: flex;
   cursor: pointer;
 }
 
-.gnb-area > ul > li > a span {
-  padding-left: 19px;
+.menu-area .gnb-area .gnb-link .menu-name {
+  padding-left: 1.1875rem;
   display: inline-block;
   color: #929AA6;
   font-weight: 500;
   line-height: 1.3rem;
 }
 
-.gnb-area > ul > li > a span.arrow-right {
+.menu-area .gnb-area .gnb-link .arrow-right {
   padding: 0 0.375rem 0 0;
   float: right;
   width: 0.75rem;
@@ -1842,7 +1810,7 @@ button .icon-plus {
   mask-image: url("../media/icons/icon_arrow_left.svg");
 }
 
-.gnb-area > ul > li > a span.arrow-down {
+.menu-area .gnb-area .gnb-link .arrow-down {
   padding: 0 0.375rem 0 0;
   float: right;
   width: 0.75rem;
@@ -1855,33 +1823,61 @@ button .icon-plus {
   mask-image: url("../media/icons/icon_arrow_bottom.svg");
 }
 
-.gnb-area > ul > li > ul > li {
+.menu-area .gnb-area .snb-group {
+  display: none;
+}
+
+.menu-area .gnb-area .snb-area {
   font-size: 1rem;
   color: #929AA6;
   font-weight: 400;
 }
 
-.gnb-area > ul > li > ul > li > a {
+.menu-area .gnb-area .snb-area .snb-link {
   display: block;
   cursor: pointer;
 }
 
-.gnb-area > ul > li > ul > li > a span {
-  padding-left: 39px;
+.menu-area .gnb-area .snb-area .snb-link .menu-name {
+  padding-left: 2.4375rem;
   display: inline-block;
 }
 
-.gnb-area > ul > li > ul > li > a.snb {
-  padding: 8px 20px 8px 20px;
+.menu-area .gnb-area .snb-area .snb-link.snb {
+  padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   color: #929AA6;
 }
 
-.gnb-area > ul > li > ul > li > a.active {
+.menu-area .gnb-area .snb-area .snb-link.active {
   background-color: #283238;
 }
 
-.gnb-area > ul > li > ul > li > a.active span {
+.menu-area .gnb-area .snb-area .snb-link.active .menu-name {
   color: #ffffff;
+}
+
+.menu-area .gnb.active {
+  background-color: #283238;
+}
+
+.menu-area .gnb.active .menu-name {
+  color: #ffffff;
+}
+
+.menu-area .gnb.active .icon-gnb {
+  background: #0098FF;
+}
+
+.menu-area .gnb.active-parent .menu-name {
+  color: #ffffff;
+}
+
+.menu-area .gnb.active-parent .icon-gnb {
+  background: #0098FF;
+}
+
+.menu-area .gnb.active-parent .arrow-right, .menu-area .gnb.active-parent .arrow-down {
+  background: #ffffff;
 }
 
 .icon-gnb {
@@ -5481,12 +5477,12 @@ body.thumbnail-modal-active {
 }
 
 .notification-body {
-  overflow: auto;
-  min-height: 6.875rem;
-  max-height: 20.63rem;
+  overflow-y: auto;
+  height: 20.63rem;
 }
 
-.notification-body .nodata {
+.notification-body.nodata {
+  height: 6.875rem;
   padding: 0.938rem;
 }
 
