--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -16,255 +16,236 @@
 // *********************************************************************************************************************
 
 .navigation {
-    width: $nav-width;
-    height: $nav-height;
-    background-color: $nav-bg-color;
-    position: fixed;
-    bottom: 0;
-    z-index: 1000;
+  width: $nav-width;
+  height: $nav-height;
+  background-color: $nav-bg-color;
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
 
-    .breadcrumb {
-        display: none;
-    }
+  .breadcrumb {
+    display: none;
+  }
 
-    &-config {
-        .notification {
-            &-count {
-                margin: 0.3125rem 1rem; // 5px 16px
-                padding: 0.125rem 0.625rem; // 2px 10px
-                border-radius: 1.25rem; // 20px
-                background-color: $blue-gray;
-                font-size: 0.75rem; // 12px
-                font-weight: 700;  // bold
-                text-align: center;
-                position: absolute;
-                line-height: inherit;
-            }
-            &.active { // 알림이 존재할 경우
-                .notification-round {
-                    fill: $point-blue;
-                }
-                .notification-bell {
-                    fill: $white;
-                }
-                .notification-count {
-                    color: $white;
-                    background-color: $point-blue;
-                }
-            }
+  &-config {
+    .notification {
+      &-count {
+        margin: 0.3125rem 1rem; // 5px 16px
+        padding: 0.125rem 0.625rem; // 2px 10px
+        border-radius: 1.25rem; // 20px
+        background-color: $blue-gray;
+        font-size: 0.75rem; // 12px
+        font-weight: 700;  // bold
+        text-align: center;
+        position: absolute;
+        line-height: inherit;
+      }
+      &.active { // 알림이 존재할 경우
+        .notification-round {
+          fill: $point-blue;
         }
-        .user-info {
-            height: 3.125rem; // 50px
-            display: flex;
-            align-items: center;
-            padding: 0.6875rem 0 0.6875rem 1.3125rem;
-            .user-name {
-                color: $blue-gray;
-                font-weight: $font-weight-medium;
-            }
-            .user-profile {
-                width: 1.688rem; // 27px
-                height: 1.688rem;  // 27px
-                border-radius: 50%;
-                display: inline-block; 
-                vertical-align: middle;
-                margin-right: 0.625rem; // 10px
-            }
+        .notification-bell {
+          fill: $white;
         }
-        .logout {
-            height: 3.125rem; // 50px
-            align-items: center;
-            padding: 0.6875rem 0 0.6875rem 1.3125rem;
-            .btn-logout {
-                display: flex;
-                color: $blue-gray;
-                font-weight: $font-weight-medium;
-            }
-            .icon-logout {
-                margin-right: 0.875rem; // 14px
-                @include maskImage('#{$icon-folder-path}gnb/icon_gnb_logout.svg', 1.6875rem, 1.6875rem, no-repeat, center, null, $blue-gray); // 27px
-            }
+        .notification-count {
+          color: $white;
+          background-color: $point-blue;
         }
-        & > div:hover {
-            background: $menu-bg-hover;
-        }
+      }
     }
+    .user-info {
+      height: 3.125rem; // 50px
+      display: flex;
+      align-items: center;
+      padding: 0.6875rem 0 0.6875rem 1.3125rem;
+      .user-name {
+        color: $blue-gray;
+        font-weight: $font-weight-medium;
+      }
+      .user-profile {
+        width: 1.688rem; // 27px
+        height: 1.688rem;  // 27px
+        border-radius: 50%;
+        display: inline-block; 
+        vertical-align: middle;
+        margin-right: 0.625rem; // 10px
+      }
+    }
+    .logout {
+      height: 3.125rem; // 50px
+      align-items: center;
+      padding: 0.6875rem 0 0.6875rem 1.3125rem;
+      .btn-logout {
+        display: flex;
+        color: $blue-gray;
+        font-weight: $font-weight-medium;
+      }
+      .icon-logout {
+        margin-right: 0.875rem; // 14px
+        @include maskImage('#{$icon-folder-path}gnb/icon_gnb_logout.svg', 1.6875rem, 1.6875rem, no-repeat, center, null, $blue-gray); // 27px
+      }
+    }
+    & > div:hover {
+      background: $menu-bg-hover;
+    }
+  }
 }
 
 .logo {
-    width: $logo-width;
-    height: $logo-height;
-    background-color: $menu-bg-color;
-    position: fixed;
-    z-index: 1000;
-    padding: 15px 20px 15px 20px;; // 15px 20px 15px 20px;
+  width: $logo-width;
+  height: $logo-height;
+  background-color: $menu-bg-color;
+  position: fixed;
+  z-index: 1000;
+  padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
 }
 
 .menu {
-    width: $menu-width;
-    height: $menu-height;
-    background-color: $menu-bg-color;
-    position: relative;
-    left: 0;
-    top: $logo-height;
-    z-index: 1000;
-    overflow: auto;
-    .right {
-        right: 0.375rem // 6px
+  width: $menu-width;
+  height: $menu-height;
+  background-color: $menu-bg-color;
+  position: relative;
+  left: 0;
+  top: $logo-height;
+  z-index: 1000;
+  overflow: auto;
+  .right {
+    right: 0.375rem; // 6px
+  }
+  .os-menu-scrollbar {
+    &-track {
+      background: rgba(40, 50, 56, 0.6);
+      border-radius: 0.5rem; // 8px
+      pointer-events: auto;
+      position: relative;
+      height: 100%;
+      width: 100%;
+      padding: 0 !important;
+      border: none !important;
     }
-    .os-menu-scrollbar-track {
-        background: rgba(40, 50, 56, 0.6);
-        border-radius: 0.5rem; // 8px
-        pointer-events: auto;
-        position: relative;
-        height: 100%;
-        width: 100%;
-        padding: 0 !important;
-        border: none !important;
+    &-handle {
+      background: $light-black;
+      border-radius: 0.5rem; // 8px
     }
-    .os-menu-scrollbar-handle {
-        background: #3F4B56;
-        border-radius: 0.5rem; // 8px
-    }
+  }
 }
 
 // GNB
-.gnb-area {
-    .gnb {
-        padding: 15px 20px 15px 20px;
-        vertical-align: middle;
-        &.active {
-            background-color: $menu-bg-hover;
-            span {
-                color: $white;
-                &.icon-gnb {
-                    background: $point-blue;
-                }
-            }
+.menu-area {
+  .gnb {
+    padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
+    vertical-align: middle;
+    &-area {
+      line-height: 1.3;
+      font-weight: $font-weight-medium;
+      &:first-child {
+        margin-top: 0.3125rem; // 5px
+      }
+      &:hover {
+        background: $menu-bg-hover;
+      }
+      .gnb-link {
+        display: flex;
+        cursor: pointer;
+        .menu-name {
+          padding-left: 1.1875rem; //19px
+          display: inline-block;
+          color: $menu-color;
+          font-weight: $font-weight-medium;
+          line-height: 1.3rem;
         }
-        &.active-parent {
-            span {
-                color: $white;
-                &.icon-gnb{
-                    background: $point-blue;
-                }
-                &.arrow-right, &.arrow-down {
-                    background: $white;
-                }
-            }
+        .arrow {
+          &-right {
+            @include menuArrow;
+            -webkit-mask: url($icon-arrow-left) no-repeat center center;
+            mask-image: url($icon-arrow-left);
+          }
+          &-down {
+            @include menuArrow;
+            -webkit-mask: url($icon-arrow-bottom) no-repeat center center;
+            mask-image: url($icon-arrow-bottom);
+          }
         }
-    }
-    & > ul > li {
-        line-height: 1.3;
-        font-weight: $font-weight-medium;
-
-        svg {
-            fill: #929aa6;
+      }
+      .snb {
+        &-group {
+          display: none;
         }
-
-        &:hover {
-            background: $menu-bg-hover;
-        }
-
-        .snb-set {
-            display: none;
-        }
-
-        &:first-child {
-            margin-top: 5px;
-        }
-
-        & > a {
-            display: flex;
+        &-area {
+          font-size: $menu-font;
+          color: $menu-color;
+          font-weight: $font-weight-regular;
+          .snb-link {
+            display: block;
             cursor: pointer;
-
-            span {
-                padding-left: 19px;
-                display: inline-block;
-                color: $menu-color;
-                font-weight: $font-weight-medium;
-                line-height: 1.3rem;
-
-                &.arrow {
-                    &-right {
-                        @include menuArrow;
-                        -webkit-mask: url($icon-arrow-left) no-repeat center center;
-                        mask-image: url($icon-arrow-left);
-                    }
-                    &-down {
-                        @include menuArrow;
-                        -webkit-mask: url($icon-arrow-bottom) no-repeat center center;
-                        mask-image: url($icon-arrow-bottom);
-                    }
-                }
+            .menu-name {
+              padding-left: 2.4375rem; // 39px
+              display: inline-block;
             }
-        }
-
-        & > ul > li {
-            font-size: $menu-font;
-            color: $menu-color;
-            font-weight: 400;
-
-            & > a {
-                display: block;
-                cursor: pointer;
-
-                span {
-                    padding-left: 39px;
-                    display: inline-block;
-                }
-
-                &.snb {
-                    padding: 8px 20px 8px 20px;
-                    color: $menu-color;
-                }
-                &.active {
-                    background-color: $menu-bg-hover;
-                    span {
-                        color: $white;
-                    }
-                }
+            &.snb {
+              padding: 0.5rem 1.25rem 0.5rem 1.25rem; // 8px 20px 8px 20px
+              color: $menu-color;
             }
+            &.active {
+              background-color: $menu-bg-hover;
+              .menu-name { color: $white; }
+            }
+          }
         }
+      }
     }
+
+    &.active {
+      background-color: $menu-bg-hover;
+      .menu-name {
+        color: $white;
+      }
+      .icon-gnb { background: $point-blue; }
+    }
+    &.active-parent {
+      .menu-name { color: $white; }
+      .icon-gnb{ background: $point-blue; }
+      .arrow-right, .arrow-down { background: $white; }
+    }
+  }
 }
 
 .icon-gnb {
-    @include menuIcon;
-    &-board {
-        -webkit-mask: url($icon-gnb-board) no-repeat center center;
-        mask-image: url($icon-gnb-board);
-    }
-    &-dashboard {
-        -webkit-mask: url($icon-gnb-dashboard) no-repeat center center;
-        mask-image: url($icon-gnb-dashboard);
-    }
-    &-document {
-        -webkit-mask: url($icon-gnb-document) no-repeat center center;
-        mask-image: url($icon-gnb-document);
-    }
-    &-download {
-        -webkit-mask: url($icon-gnb-download) no-repeat center center;
-        mask-image: url($icon-gnb-download);
-    }
-    &-faq {
-        -webkit-mask: url($icon-gnb-faq) no-repeat center center;
-        mask-image: url($icon-gnb-faq);
-    }
-    &-notice {
-        -webkit-mask: url($icon-gnb-notice) no-repeat center center;
-        mask-image: url($icon-gnb-notice);
-    }
-    &-config {
-        -webkit-mask: url($icon-gnb-config) no-repeat center center;
-        mask-image: url($icon-gnb-config);
-    }
-    &-workflow {
-        -webkit-mask: url($icon-gnb-workflow) no-repeat center center;
-        mask-image: url($icon-gnb-workflow);
-    }
-    &-token {
-        -webkit-mask: url($icon-gnb-token) no-repeat center center;
-        mask-image: url($icon-gnb-token);
-    }
+  @include menuIcon;
+  &-board {
+    -webkit-mask: url($icon-gnb-board) no-repeat center center;
+    mask-image: url($icon-gnb-board);
+  }
+  &-dashboard {
+    -webkit-mask: url($icon-gnb-dashboard) no-repeat center center;
+    mask-image: url($icon-gnb-dashboard);
+  }
+  &-document {
+    -webkit-mask: url($icon-gnb-document) no-repeat center center;
+    mask-image: url($icon-gnb-document);
+  }
+  &-download {
+    -webkit-mask: url($icon-gnb-download) no-repeat center center;
+    mask-image: url($icon-gnb-download);
+  }
+  &-faq {
+    -webkit-mask: url($icon-gnb-faq) no-repeat center center;
+    mask-image: url($icon-gnb-faq);
+  }
+  &-notice {
+    -webkit-mask: url($icon-gnb-notice) no-repeat center center;
+    mask-image: url($icon-gnb-notice);
+  }
+  &-config {
+    -webkit-mask: url($icon-gnb-config) no-repeat center center;
+    mask-image: url($icon-gnb-config);
+  }
+  &-workflow {
+    -webkit-mask: url($icon-gnb-workflow) no-repeat center center;
+    mask-image: url($icon-gnb-workflow);
+  }
+  &-token {
+    -webkit-mask: url($icon-gnb-token) no-repeat center center;
+    mask-image: url($icon-gnb-token);
+  }
 }
