--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -63,10 +63,11 @@
     }
   }
   &-body {
-    overflow: auto;
-    min-height: 6.875rem; // 110px
-    max-height: 20.63rem; // 330px
-    .nodata {
+    overflow-y: auto;
+    // min-height: 6.875rem; // 110px
+    height: 20.63rem; // 330px
+    &.nodata {
+      height: 6.875rem; // 110px
       padding: 0.938rem; // 15px
     }
   }
