#9436 관련문서 팝업 스크롤바 위치 이상함 일감 수정 진행

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2968,8 +2968,8 @@ button .icon-plus {
 }
 
 .itsm-popup .related-instance-main .table-set table tbody {
-  display: table;
-  width: 100%;
+  display: block;
+  width: 57.44rem;
   height: 32.5rem;
   color: #586872;
   overflow-y: auto;
