--- a/src/main/resources/public/src/scss/form/_modal.scss
+++ b/src/main/resources/public/src/scss/form/_modal.scss
@@ -5,5 +5,9 @@
   &.thumbnail-image {
     width: $thumbnail-modal-dialog-width;
     height: $thumbnail-modal-dialog-height;
+
+    .modal-content {
+      height: calc(#{$thumbnail-modal-dialog-height} - #{$modal-header-height} - #{$modal-bottom-height});
+    }
   }
 }
