--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -3,15 +3,18 @@
 // thumnbnail > modal(type: icon) 관련 템플릿
 .thumbnail-icon {
   .thumbnail-container {
-    padding: $thumbnail-container-padding;
+    padding: $thumbnail-icon-container-padding;
     height: auto;
     .thumbnail {
-      width: $thumbnail-icon-size;
-      height: $thumbnail-icon-size;
-      margin: $thumbnail-icon-margin;
-      div.thumbnail-img, div.thumbnail-icon {
-        height: $thumbnail-icon-div-size;
-        background-size: 100% !important
+      width: $thumbnail-size;
+      height: $thumbnail-size;
+      margin: 0.4375rem; // 7px
+      box-shadow: $thumbnail-icon-box-shadow;
+
+      .thumbnail-icon {
+        width: $thumbnail-icon-size;
+        height: $thumbnail-icon-size;
+        margin: 2rem auto; // 32px auto
       }
     }
   }
