--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -330,7 +330,6 @@ input, button, select, optgroup, textarea {
 }
 
 .required {
-  padding-left: 0.3125rem;
   font-weight: 700;
 }
 
@@ -343,6 +342,23 @@ input, button, select, optgroup, textarea {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.auto-break {
+  word-break: break-all;
+}
+
+.horizontal-bar {
+  height: 0.0625rem;
+  margin: 0.9375rem 0;
+  background-color: #EBEBEB;
+}
+
+.vertical-bar {
+  width: 1.875rem;
+  min-height: 1.875rem;
+  border-right: 0.0625rem solid #EBEBEB;
+  margin-right: 1.875rem;
 }
 
 /* _fonts.scss 
@@ -2103,12 +2119,11 @@ button .icon-plus {
 .itsm-container .contents-token .list-item .document-row-info .document-tag {
   max-width: 23.75rem;
   margin-top: 3.5rem;
-  color: #67717F;
 }
 
 .itsm-container .contents-token .list-item .document-row-info .document-tag span {
   background: rgba(0, 152, 255, 0.1);
-  color: #0098ff;
+  color: #0098FF;
   text-align: center;
   margin: 0.25rem;
   border-radius: 0.0625rem;
@@ -2185,6 +2200,11 @@ button .icon-plus {
   display: block;
   -webkit-animation: slide-down 0.3s ease-out;
   -moz-animation: slide-down 0.3s ease-out;
+  animation-delay: 0s;
+  animation-duration: 0.3s;
+  animation-name: slide-down;
+  animation-timing-function: ease-out;
+  animation-iteration-count: 1;
 }
 
 .itsm-container .slide-up {
@@ -2206,11 +2226,33 @@ button .icon-plus {
 @-moz-keyframes slide-down {
   0% {
     opacity: 0;
-    -moz-transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
   }
   100% {
     opacity: 1;
-    -moz-transform: translateY(0);
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-o-keyframes slide-down {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
   }
 }
 
@@ -2225,7 +2267,29 @@ button .icon-plus {
   }
 }
 
-@-webkit-keyframes slide-up {
+@-moz-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-o-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@keyframes slide-up {
   0% {
     opacity: 0;
     -webkit-transform: translateY(100%);
