--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -71,10 +71,9 @@
                         .document-tag {
                             max-width: 23.75rem; // 380px
                             margin-top: 3.5rem; // 56px
-                            color: #67717F;
                             span {
                                 background: rgba(0, 152, 255, 0.1 );
-                                color: rgba(0, 152, 255, 1 );
+                                color: $point-blue;
                                 text-align: center;
                                 margin: 0.25rem; // 4px
                                 border-radius: 0.0625rem; // 1px
@@ -145,55 +144,32 @@
 
 .slide-down {
     display: block;
-    -webkit-animation: slide-down 0.3s ease-out;
-    -moz-animation: slide-down 0.3s ease-out;
+    @include animation(0s, 0.3s, slide-down, ease-out);
 }
 
 .slide-up {
-    -webkit-animation: slide-up 0.3s ease-out;
-    -moz-animation: slide-up 0.3s ease-out;
+    @include animation(0s, 0.3s, slide-up, ease-out);
 }
 
-@-webkit-keyframes slide-down {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-100%);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-    }
+// keyframes
+@include keyframe(slide-down) {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
 }
 
-@-moz-keyframes slide-down {
-    0% {
-        opacity: 0;
-        -moz-transform: translateY(-100%);
-    }
-    100% {
-        opacity: 1;
-        -moz-transform: translateY(0);
-    }
-}
-
-@-webkit-keyframes slide-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(100%);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-    }
-}
-
-@-webkit-keyframes slide-up {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(100%);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-    }
+@include keyframe(slide-up) {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
 }
