--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -22,7 +22,7 @@
   }
 
   // .notification hover 시 노출되는 영역 전반
-  &-container {
+  &-block {
     position: absolute;
     width: 26.25rem; // 420px
     bottom: 0;
