#9477 [기본 SCSS] ITSM > notification 리팩토링
- MR feedback

--- a/src/main/resources/public/src/scss/theme/default/_notification.scss
+++ b/src/main/resources/public/src/scss/theme/default/_notification.scss
@@ -61,7 +61,7 @@
       }
 
       // 우측 상단 X 버튼
-      &.close { 
+      &.icon-close { 
         width: 0.875rem; //14px
         height: 0.875rem;
         margin-left: auto;
