--- a/src/main/resources/public/template/notification/notificationList.html
+++ b/src/main/resources/public/template/notification/notificationList.html
@@ -5,7 +5,7 @@
         <span class="title" th:text="#{notification.label.notification}"></span>
         <span id="total"></span>
         <span class="message" th:text="#{notification.msg.description}"></span>
-        <span class="close float-right" onclick="toggleNotificationContainer();"></span>
+        <span class="icon-close float-right" onclick="toggleNotificationContainer();"></span>
     </div>
     <div class="notification-body" th:classappend="${#arrays.isEmpty(notificationList)} ? nodata">
         <div class="nodata" th:if="${#arrays.isEmpty(notificationList)}">
