--- a/src/main/resources/public/src/scss/process/process.scss
+++ b/src/main/resources/public/src/scss/process/process.scss
@@ -22,4 +22,5 @@
 @import '_scrollbars.scss';
 @import '_color-picker.scss';
 @import '_tooltip.scss';
+@import '_modal.scss';
 @import '_thumbnail.scss';
