--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -170,7 +170,7 @@
                             }
                         }
                     } else {
-                        document.querySelector('.content').innerHTML = response.responseText;
+                        document.querySelector('.main-content').innerHTML = response.responseText;
                     }
                     // 검색 조회 결과 화면 스크롤바
                     OverlayScrollbars(document.querySelector('.list'), {
