--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="scroll-wrap list">
+        <div class="scroll-wrap list flex-column">
             <div class="list" id="tokenList"></div>
             <input type="hidden" sec:authorize="hasAuthority('token.read')" th:name="isRole" th:value="true"/>
             <input type="hidden" sec:authorize="!hasAuthority('token.read')" th:name="isRole" th:value="false"/>
