--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -1,175 +1,175 @@
 .contents-token {
-    @include contents-template();
-    .header { padding: 2.875rem 3.75rem 0.625rem 3.75rem; } // 46px 60px 10px 60px
-    .search-area {
-        padding: 1.875rem 3.75rem 1.875rem 3.75rem; // 30px 60px 30px 60px
-        border-bottom: 0.0625rem solid $line-gray;
-        height: 6.25rem; // 100px
-    }
-    .list {
-        background-color: $white;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-        flex: auto;
-        &-item {
-            margin: 0.625rem 3.75rem; // 10px 60px
-            background-color: $white;
-            display: flex;
-            &:first-child {
-                margin-top:  3.125rem; // 50px
-            }
+  @include contents-template();
+  .header { padding: 2.875rem 3.75rem 0.625rem 3.75rem; } // 46px 60px 10px 60px
+  .search-area {
+    height: 6.25rem; // 100px
+    padding: 1.875rem 3.75rem 1.875rem 3.75rem; // 30px 60px 30px 60px
+    border-bottom: 0.0625rem solid $line-gray;
+  }
+  .list {
+    background-color: $token-list-background;
+    overflow-y: auto;
+    flex: auto;
+    &-item {
+      margin: 0.625rem 3.75rem; // 10px 60px
+      background-color: $token-list-background;
+      display: flex;
+      &:first-child {
+        margin-top:  3.125rem; // 50px
+      }
+      .document {
+        &-color {
+          width: 0.75rem; // 12px
+          margin-left: 0;
+        }
+        &-row {
+          flex: auto;
+          display: flex;
+          justify-content: space-between;
+          padding: 1.875rem 3rem; // 30px 48px
+          border: {
+            top: 0.0625rem solid $line-gray; // 1px
+            right: 0.0625rem solid $line-gray; // 1px
+            bottom: 0.0625rem solid $line-gray; // 1px
+          }
+          &-content {
+            cursor: pointer;
             .document {
-                &-color {
-                    width: 0.75rem; // 12px
-                    margin-left: 0;
+              &-title {
+                align-items: center;
+                .text-ellipsis {
+                  margin-right: 0.625rem; // 10px
+                  max-width: 50rem; // 800px
                 }
-                &-row {
-                    flex: auto;
-                    display: flex;
-                    justify-content: space-between;
-                    padding: 1.875rem 3rem; // 30px 48px
-                    border: {
-                        top: 0.0625rem solid $line-gray; // 1px
-                        right: 0.0625rem solid $line-gray; // 1px
-                        bottom: 0.0625rem solid $line-gray; // 1px
-                    }
-                    &-content {
-                        cursor: pointer;
-                        .document-title {
-                            display: flex;
-                            flex-direction: row;
-                            align-items: center;
-                            h3 {
-                                margin-right: 0.625rem; // 10px
-                                max-width: 50rem; // 800px
-                            }
-                        }
-                        .document-topic {
-                            width: 23.75rem; // 380px
-                            &-item {
-                                color: $dark-gray;
-                                margin-top: 0.625rem; // 10px
-                                &:first-child {
-                                    margin-top: 1.5625rem; // 25px
-                                }
-                            }
-                        }
-                    }
-                    &-info {
-                        flex-direction: column;
-                        .document-detail {
-                            display: flex;
-                            align-items: center;
-                            float: right;
-                            .document-user {
-                                display: inline-flex;
-                                align-items: center;
-                                justify-content: center;
-                            }
-                        }
-                        .document-tag {
-                            max-width: 23.75rem; // 380px
-                            margin-top: 3.5rem; // 56px
-                            &-item {
-                                background: rgba(0, 152, 255, 0.1 );
-                                color: $point-blue;
-                                text-align: center;
-                                margin: 0.25rem; // 4px
-                                border-radius: 0.0625rem; // 1px
-                                padding: 0.3125rem 0.9375rem; // 5px 15px
-                                max-width: 13.75rem; // 220px
-                                display: inline-block;
-                                text-overflow: ellipsis;
-                                white-space: nowrap;
-                                overflow: hidden;
-                            }
-                        }
-                    }
+              }
+              &-topic {
+                width: 23.75rem; // 380px
+                &-item {
+                  color: $token-list-topic-color;
+                  margin-top: 0.625rem; // 10px
+                  &:first-child {
+                    margin-top: 1.5625rem; // 25px
+                  }
                 }
+              }
             }
-        }
-    }
-
-    &.dashboard {
-        background: $white;
-        .header.dashboard{
-            padding-bottom: 2.875rem;
-            background: $light-gray;
-            border-bottom: 0.0625rem solid $line-gray;
-        }
-
-        .dashboard-statistic {
-            width: 100%;
-            padding: 0.625rem 3.75rem;
-            background-color: $white;
-            display: flex;
-            justify-content: space-between;
-            .statistic-box {
+          }
+          &-info {
+            flex-direction: column;
+            .document {
+              &-detail {
                 display: flex;
                 align-items: center;
-                width: 23.75rem; // 380px
-                border: 0.0625rem solid $line-gray;
-                border-radius: 0.3125rem; // 5px
-                padding: 1.5625rem; // 25px
-                .statistic-info {
-                    margin-left: 1.5625rem; // 25px
-                    .statistic-count {
-                        @include h3;
-                        margin-bottom: 0.9375rem; // 15px
-                    }
-                    .statistic-type {
-                        @include h5;
-                        color: $blue-gray;
-                    }
+                .document-user {
+                  display: inline-flex;
+                  align-items: center;
+                  justify-content: center;
                 }
+              }
+              &-tag {
+                max-width: 23.75rem; // 380px
+                margin-top: 3.5rem; // 56px
+                &-item {
+                  background: $token-list-tag-color;
+                  color: $point-blue;
+                  text-align: center;
+                  margin: 0.25rem; // 4px
+                  border-radius: 0.0625rem; // 1px
+                  padding: 0.3125rem 0.9375rem; // 5px 15px
+                  max-width: 13.75rem; // 220px
+                  display: inline-block;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
+                }
+              }
             }
+          }
         }
-
-        .title-middle {
-            margin-top: 3.125rem; // 50px
-            margin-left: 3.75rem;
-            @include h3();
-        }
-        .list {
-            .list-item {
-                margin: 0.625rem 3.75rem;
-            }
-        }
+      }
     }
+  }
+
+  &.dashboard {
+    background: $token-dashbaord-background;
+    .header {
+      padding-bottom: 2.875rem;
+      background: $token-dashbaord-header-color;
+      border-bottom: $token-dashbaord-border;
+    }
+    .dashboard-statistic {
+      width: 100%;
+      padding: 0.625rem 3.75rem;
+      background-color: $token-dashbaord-background;
+      display: flex;
+      .statistic {
+        &-box {
+          display: flex;
+          align-items: center;
+          width: 23.75rem; // 380px
+          border: $token-dashbaord-border;
+          border-radius: 0.3125rem; // 5px
+          padding: 1.5625rem; // 25px
+        }
+        &-info {
+          margin-left: 1.5625rem; // 25px
+        }
+        &-count {
+          @include h3;
+          display: flex;
+          margin-bottom: 0.9375rem; // 15px
+        }
+        &-type {
+          @include h5;
+          color: $blue-gray;
+        }
+      }
+    }
+    .subtitle {
+      margin: 3.125rem 0 0 3.75rem; // 50px 0 0 60px
+      @include h3();
+    }
+    // .list {
+      .list-item {
+        margin: 0.625rem 3.75rem; // 10px 60px
+      }
+    // }
+  }
 }
 .total-count {
-    line-height: 2;
+  line-height: 2;
 }
 
-.slide-down {
+// 문서함 scroll animation
+.slide {
+  &-down{
     display: block;
     @include animation(0s, 0.3s, slide-down, ease-out);
-}
-
-.slide-up {
+  }
+  &-up {
     @include animation(0s, 0.3s, slide-up, ease-out);
+  }
 }
 
 // keyframes
 @include keyframe(slide-down) {
   0% {
-    opacity: 0;
-    -webkit-transform: translateY(-100%);
+  opacity: 0;
+  -webkit-transform: translateY(-100%);
   }
   100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
+  opacity: 1;
+  -webkit-transform: translateY(0);
   }
 }
 
 @include keyframe(slide-up) {
   0% {
-    opacity: 0;
-    -webkit-transform: translateY(100%);
+  opacity: 0;
+  -webkit-transform: translateY(100%);
   }
   100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
+  opacity: 1;
+  -webkit-transform: translateY(0);
   }
 }
