--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -22,7 +22,7 @@
                 </span>
             </div>
             <div class="document-row-info">
-                <div class="document-detail .float-right">
+                <div class="document-detail float-right">
                     <div class="document-user">
                         <img class="profile-photo" alt="profile pic" th:src="${token.avatarPath}">
                         <h5 class="user-name" th:text="${token.createUserName}"></h5>
