--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorator="layout/popupLayout">
 <head>
-    <title th:text="#{notice.label.view}"></title>
+    <title th:text="#{notice.label.notice}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
