--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -10,7 +10,7 @@
 <th:block layout:fragment="content">
     <div class="notice-header">
         <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{notice.label.list}"></h1>
+            <h1 th:text="#{notice.label.notice}"></h1>
             <h6 class="description" th:text="#{notice.msg.viewDescription}"></h6>
         </div>
     </div>
