--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -4,14 +4,14 @@
     xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{menu.notice.parent}"></title>
+    <title th:text="#{notice.label.notice}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list">
         <div class="page-title">
-            <h1 th:text="#{notice.label.list}"></h1>
-            <h6 class="title-description" th:text="#{notice.msg.description}"></h6>
+            <h1 th:text="#{notice.label.notice}"></h1>
+            <h6 class="title-description" th:text="#{notice.msg.searchDescription}"></h6>
         </div>
         <div class="search-area">
             <div class="search-input">
