--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -11,7 +11,7 @@
     <div class="contents-flex scroll-wrap">
         <div class="header">
             <div class="page-title">
-                <h1 th:text="#{notice.label.list}"></h1>
+                <h1 th:text="#{notice.label.notice}"></h1>
                 <h6 class="title-description" th:text="#{notice.msg.viewDescription}"></h6>
             </div>
         </div>
