--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -4,13 +4,13 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/portalLayout">
 <head>
-    <title th:text="#{menu.notice.parent}"></title>
+    <title th:text="#{notice.label.notice}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="notice-header">
         <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{notice.label.list}"></h1>
+            <h1 th:text="#{notice.label.notice}"></h1>
             <h6 class="description" th:text="#{notice.msg.portalDescription}"></h6>
         </div>
         <div class="notice-search">
