#8924 각 페이지별 제목과 설명을 점검 - 권한, 역할

--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -4,15 +4,15 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{role.label.manage}"></title>
+    <title th:text="#{role.label.role}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list-edit">
         <div class="list-area">
             <div class="page-title">
-                <h1 th:text="#{role.label.manage}"></h1>
-                <h6 class="title-description" th:text="#{role.msg.description}"></h6>
+                <h1 th:text="#{role.label.role}"></h1>
+                <h6 class="title-description" th:text="#{role.msg.editDescription}"></h6>
             </div>
             <div class="search-area">
                 <div class="search-input">
