--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -4,15 +4,15 @@
     xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{auth.label.manage}"></title>
+    <title th:text="#{auth.label.auth}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list-edit">
         <div class="list-area">
             <div class="page-title">
-                <h1 th:text="#{auth.label.manage}"></h1>
-                <h6 class="title-description" th:text="#{auth.msg.description}"></h6>
+                <h1 th:text="#{auth.label.auth}"></h1>
+                <h6 class="title-description" th:text="#{auth.msg.editDescription}"></h6>
             </div>
             <div class="search-area">
                 <div class="search-input">
