#8924 각 페이지별 제목과 설명을 점검 - 브라우저 가이드, 세션, 회원가입, 포탈 메인, 에러, 로그인

--- a/src/main/resources/public/template/error.html
+++ b/src/main/resources/public/template/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
     <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
-    <title th:text="#{error.label.error}"></title>
+    <title th:text="#{project.title.error}"></title>
 </head>
 <body>
 <div class="alice-wrapper">
