--- a/src/main/resources/public/template/portal/portalBrowserGuide.html
+++ b/src/main/resources/public/template/portal/portalBrowserGuide.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/css; charset=UTF-8"/>
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
     <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
+    <title th:text="#{project.title.browserGuide}"></title>
 </head>
 <body>
 <div class="alice-wrapper">
