--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" th:href="@{/assets/media/images/zenius.ico}" type="image/x-icon">
     <link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/dropzone/dropzone.css}" rel="stylesheet"/>
-    <title th:text="#{project.label.name}"></title>
+    <title th:text="#{project.title.login}"></title>
 </head>
 <body>
 <div class="alice-wrapper">
